Fix radio button left alignment on firefox

--- a/frontend/components/forms/fields/Radio/_styles.scss
+++ b/frontend/components/forms/fields/Radio/_styles.scss
@@ -13,7 +13,7 @@
       opacity: 0;
       width: 0;
       height: 0;
-      margin: 0;
+      display: none;
 
       & + .radio__control::before {
         position: absolute;
